Replace collect(Collectors.toList()) by toList()
Signed-off-by: Nathan Dissoubray <nathan.dissoubray@rte-france.com>